Changelog
---------
    1.2.8.0:
        * Improved detection of "gungame.smx" and "gungame_sdkhooks.smx" files. Now you can compile version with sdkhooks support with name "gungame.smx".
        * Added global forward: "GG_OnWarmupStart".
        * Added plugin "gungame_warmup_configs.smx".
        * Added configs "gungame.warmupend.cfg" and "gungame.warmupstart.cfg" that executes on warmup start and end by plugin "gungame_warmup_configs.smx".
        * Added new option for config variable "StripDeadPlayersWeapon". If "StripDeadPlayersWeapon" set to "2", then alive players can drop weapons.
        * Added "WinnerEffect" config variable. If "1" then there will be funny winner effect after gungame winner. All players will fly into the sky and winner will be glowing.
        * Added "EndGameDelay" config variable. You can set delay before end of multiplayer game is triggered after player win the gungame.
        * Added new native into "gungame_config.smx" plugin: "GG_ConfigGetDir" - to get config directory (for example "gungame/csgo" is default for csgo if "sm_gg_cfgdirname" is not changed).

    1.2.7.0:
        * [CS:GO] Fixed MOTD.
          Config "cfg\gungame\csgo\gungame.config.txt" updated. 
          Config variable "DisplayWinnerMotd" set to "1".
          Config variable "DisplayWinnerUrl" set to "http://otstrel.ru/gg5_win_csgo.php?close=10".
        * Added files:
          "tools/README.txt" - description of tools files, 
          "tools/csgo_window_open.php" - file to make MOTD works on csgo (if you want to make you own web server only).

    1.2.6.2:
        * [CS:S] Fixed CSS version of plugin. It was completely broken after last plugin release with error in sourcemod error log file.

    1.2.6.1:
        * Refactoring. Performance improvement.

    1.2.6.0:
        * [CS:GO] Added support for "molotov", "incgrenade" and "taser" weapon level.